# distributed_rtos

./: .gitignore  Dockerfile.esp8266  README.md  RUNBOOK.md  instructions.txt  llm-prompt.md  run-lab.sh
dashboard/: app.py  mqtt_client.py
docs/: codex-note-esp32-migration.md  contributions.md  decisions.md  firmware-architecture.md  formal-grounding.md  main-walkthrough.md  midterm-summary-2026-03-18.md  system-state-model.md  threats-to-validity.md
experiments/: analyze_delegation.py  analyze_logs.py  compare_nodes.py  compare_nodes_multi.py  compare_profiles.py  compare_topologies.py  delegation_test.py  last_run.json  last_run_1.json  last_run_2.json  last_run_3.json  load_sweep.py  plot_failover.py
firmware/: STRUCTURE.txt
firmware-esp32/: CMakeLists.txt  README.md  sdkconfig
firmware-esp32/main/: CMakeLists.txt  app_main.c
firmware-esp32/main/config/: config.h  wifi_secrets.example.h
firmware-esp32/main/core/: metrics.c  metrics.h  system_context.h
firmware-esp32/main/network/: ._mqtt.c  delegation.c  delegation.h  mqtt.c  mqtt.h  wifi.c  wifi.h  work_transport.c  work_transport.h
firmware-esp32/main/tasks/: compute_task.c  compute_task.h  control_task.c  control_task.h  manager_task.c  manager_task.h  sensor_task.c  sensor_task.h
serial_logs/: runlab_20260426-203152.out  runlab_20260426-203152.sessions  runlab_20260426-204055.out  runlab_20260426-204055.sessions  runlab_20260426-211335.out  runlab_20260426-211335.sessions  runlab_20260426-214054.out  runlab_20260426-214054.sessions  runlab_20260426-220626.out  runlab_20260426-220626.sessions  (+8 more)
(+193 files in other folders)
